--- a/com.osm2xp.core/.classpath
+++ b/com.osm2xp.core/.classpath
@@ -9,13 +9,13 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java/"/>
 	<classpathentry kind="src" path="src/test/java/"/>
-	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaGeom.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1554127292753/source/javaGeom-0.11.1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-pbf.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/activation.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1552975380805/source/commons-lang-2.6-sources-1552994425697.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-core.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1553755724575/source/jaxb-impl-2.2.11-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl.jar" sourcepath="C:/Users/32kda/AppData/Local/Temp/.org.sf.feeling.decompiler1554100099696/source/jaxb-impl-2.2.11-sources-1554119230642.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/openmap.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-core.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/osmosis-osm-binary.jar"/>
