--- a/com.osm2xp.product/pom.xml
+++ b/com.osm2xp.product/pom.xml
@@ -117,6 +117,19 @@
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
+				 	<execution>
+                    	<id>createResDir</id> <!-- Create empty dir for user's resources -->
+                    	<phase>process-resources</phase>
+                    	<configuration>
+                       		 <tasks>
+                           		<mkdir dir="./target/products/${project.artifactId}/win32/win32/x86_64/xplane/resources"/>
+                           		<mkdir dir="./target/products/${project.artifactId}/linux/gtk/x86_64/xplane/resources"/>
+                       		 </tasks>
+                   		 </configuration>
+                   		 <goals>
+                        	<goal>run</goal>
+                    	</goals>
+                	</execution>
 					<execution>
 						<phase>install</phase>
 						<configuration>
