--- a/releng-app/pom.xml
+++ b/releng-app/pom.xml
@@ -26,8 +26,8 @@
 
 	<repositories>
 		<repository>
-		   <id>eclipse-oxygen</id>
-		   <url>http://download.eclipse.org/releases/oxygen</url>
+		   <id>eclipse-r4v10</id>
+		   <url>https://download.eclipse.org/releases/2018-12/</url>
 		   <layout>p2</layout>
 		</repository>
 	</repositories>
